Mejora redacción tutorial/controlflow.po (#2212)

--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-12-08 23:12+0100\n"
-"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
+"PO-Revision-Date: 2022-11-19 23:09-0300\n"
+"Last-Translator: Carlos A. Crespo <lvccrespo@gmail.com>\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.0.1\n"
 
 #: ../Doc/tutorial/controlflow.rst:5
 msgid "More Control Flow Tools"
@@ -140,11 +141,11 @@ msgid ""
 "function, see :ref:`tut-loopidioms`."
 msgstr ""
 "En la mayoría de los casos, sin embargo, conviene usar la función :func:"
-"`enumerate`, mira :ref:`tut-loopidioms`."
+"`enumerate`, ver :ref:`tut-loopidioms`."
 
 #: ../Doc/tutorial/controlflow.rst:138
 msgid "A strange thing happens if you just print a range::"
-msgstr "Algo extraño sucede si muestras un ``range``::"
+msgstr "Algo extraño sucede si tan sólo muestras un ``range``::"
 
 #: ../Doc/tutorial/controlflow.rst:143
 msgid ""
@@ -153,7 +154,7 @@ msgid ""
 "items of the desired sequence when you iterate over it, but it doesn't "
 "really make the list, thus saving space."
 msgstr ""
-"De muchas maneras el objeto retornado por :func:`range` se comporta como si "
+"El objeto retornado por :func:`range` se comporta de muchas maneras como si "
 "fuera una lista, pero no lo es. Es un objeto que retorna los ítems sucesivos "
 "de la secuencia deseada cuando iteras sobre él, pero realmente no construye "
 "la lista, ahorrando entonces espacio."
@@ -278,7 +279,6 @@ msgid ":keyword:`!match` Statements"
 msgstr "La sentencia :keyword:`!match`"
 
 #: ../Doc/tutorial/controlflow.rst:253
-#, fuzzy
 msgid ""
 "A :keyword:`match` statement takes an expression and compares its value to "
 "successive patterns given as one or more case blocks.  This is superficially "
@@ -288,18 +288,19 @@ msgid ""
 "also extract components (sequence elements or object attributes) from the "
 "value into variables."
 msgstr ""
-"Una sentencia match recibe una expresión y compara su valor a patrones "
-"sucesivos que aparecen en uno o más bloques case. Esto es similar a grandes "
-"rasgos con una sentencia switch en C, Java o JavaScript (y muchos otros "
-"lenguajes), pero también es capaz de extraer componentes (elementos de una "
-"secuencia o atributos de un objeto) de un valor y ponerlos en variables."
+"Una sentencia :keyword:`match` recibe una expresión y compara su valor con "
+"patrones sucesivos dados en uno o más bloques case. Esto es similar a "
+"grandes rasgos con una sentencia switch en C, Java o JavaScript (y muchos "
+"otros lenguajes) pero es más similar a la comparación de patrones en "
+"lenguajes como Rust o Haskell. Sólo se ejecuta el primer patrón que coincide "
+"y también es capaz de extraer componentes (elementos de una secuencia o "
+"atributos de un objeto) de un valor y ponerlos en variables."
 
 #: ../Doc/tutorial/controlflow.rst:261
 msgid ""
 "The simplest form compares a subject value against one or more literals::"
 msgstr ""
-"La forma más simple compara un valor, el \"sujeto\", con uno o más "
-"literales::"
+"La forma más simple compara un valor expuesto con uno o más literales::"
 
 #: ../Doc/tutorial/controlflow.rst:274
 msgid ""
@@ -314,7 +315,7 @@ msgstr ""
 msgid ""
 "You can combine several literals in a single pattern using ``|`` (\"or\")::"
 msgstr ""
-"Se pueden combinar varios literales en un solo patrón usando ``|`` (\"ó\")::"
+"Se pueden combinar varios literales en un solo patrón usando ``|`` (\"o\")::"
 
 #: ../Doc/tutorial/controlflow.rst:282
 msgid ""
@@ -333,7 +334,7 @@ msgid ""
 "which makes it conceptually similar to the unpacking assignment ``(x, y) = "
 "point``."
 msgstr ""
-"¡Observa éste con cuidado! El primer patrón tiene dos literales y puede "
+"¡Observa éste caso con cuidado! El primer patrón tiene dos literales y puede "
 "considerarse una extensión del patrón literal que se mostró anteriormente. "
 "Pero los siguientes dos patrones combinan un literal y una variable, y la "
 "variable *liga* uno de los elementos del sujeto (``point``). El cuarto "
@@ -378,7 +379,7 @@ msgid ""
 msgstr ""
 "Una recomendación para leer patrones es verlos como una forma extendida de "
 "lo que pondrías en el lado izquierdo de una asignación, para así entender "
-"cuales variables tomarían que valores. Sólo los nombres que aparecen por si "
+"cuáles variables tomarían qué valores. Sólo los nombres que aparecen por si "
 "solos (cómo ``var`` arriba) son asignados por una sentencia match. Nunca se "
 "asigna a los nombres con puntos (como ``foo.bar``), nombres de atributos "
 "(los ``x=`` e ``y=`` arriba) o nombres de clases (reconocidos por los "
@@ -414,9 +415,9 @@ msgid ""
 "that they don't match iterators or strings."
 msgstr ""
 "Al igual que las asignaciones con desempaquetado, los patrones de lista o "
-"tupla tienen el mismo significado y en realidad coinciden con cualquier "
-"secuencia. Una excepción importante es que no coinciden ni con iteradores ni "
-"con cadenas de caracteres."
+"tupla tienen exactamente el mismo sentido y realmente coinciden con "
+"cualquier secuencia arbitraria. Una excepción importante es que no coinciden "
+"ni con iteradores ni con cadenas de caracteres."
 
 #: ../Doc/tutorial/controlflow.rst:375
 msgid ""
@@ -426,24 +427,23 @@ msgid ""
 "without binding the remaining items."
 msgstr ""
 "Los patrones de secuencia soportan desempaquetado extendido: ``[x, y, "
-"*otros]`` and ``(x, y, *otros)`` funcionan de manera similar a las "
+"*otros]`` y ``(x, y, *otros)`` funcionan de manera similar a las "
 "asignaciones con desempaquetado.  El nombre luego de ``*`` también puede ser "
 "``_``, con lo cual ``(x, y, *_)`` coincide con cualquier secuencia de al "
-"menos del elementos, sin ligar ninguno de los demás elementos."
+"menos dos elementos, sin ligar ninguno de los demás elementos."
 
 #: ../Doc/tutorial/controlflow.rst:380
-#, fuzzy
 msgid ""
 "Mapping patterns: ``{\"bandwidth\": b, \"latency\": l}`` captures the "
 "``\"bandwidth\"`` and ``\"latency\"`` values from a dictionary.  Unlike "
 "sequence patterns, extra keys are ignored.  An unpacking like ``**rest`` is "
 "also supported.  (But ``**_`` would be redundant, so it is not allowed.)"
 msgstr ""
-"Los patrones de mapeo: ``{\"ancho de banda\": c, \"latencia\": l}`` capturan "
-"los valores ``\"ancho de banda\"`` y ``\"latencia\"`` de un diccionario.  A "
-"diferencia de los patrones de secuencia, las claves adicionales en el sujeto "
-"son ignoradas.  Puede usarse un desempaquetado como ``**rest`` .  (Aunque "
-"``**_`` sería redundante, con lo cual no está permitido)"
+"Los patrones de mapeo: ``{\"ancho_de_banda\": c, \"latencia\": l}`` capturan "
+"los valores ``\"ancho_de_banda\"`` y ``\"latencia\"`` de un diccionario. A "
+"diferencia de los patrones de secuencia, las claves adicionales son "
+"ignoradas. Puede usarse un desempaquetado como ``**otros`` . (Aunque ``**_`` "
+"sería redundante, con lo cual no está permitido)"
 
 #: ../Doc/tutorial/controlflow.rst:385
 msgid "Subpatterns may be captured using the ``as`` keyword::"
@@ -462,8 +462,8 @@ msgid ""
 "Most literals are compared by equality, however the singletons ``True``, "
 "``False`` and ``None`` are compared by identity."
 msgstr ""
-"La mayoría de los literales se comparan por igualdad, pero los singletons "
-"``True``, ``False`` y ``None`` se comparan por identidad."
+"La mayoría de los literales se comparan por igualdad, pero las instancias "
+"únicas ``True``, ``False`` y ``None`` se comparan por identidad."
 
 #: ../Doc/tutorial/controlflow.rst:395
 msgid ""
@@ -483,7 +483,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:420
 msgid "Defining Functions"
-msgstr "Definiendo funciones"
+msgstr "Definir funciones"
 
 #: ../Doc/tutorial/controlflow.rst:422
 msgid ""
@@ -521,8 +521,8 @@ msgstr ""
 "la sección :ref:`tut-docstrings`.). Existen herramientas que usan las "
 "``docstrings`` para producir documentación imprimible o disponible en línea, "
 "o para dejar que los usuarios busquen interactivamente a través del código; "
-"es una buena práctica incluir ``docstrings`` en el código que escribes, y "
-"hacerlo un buen hábito."
+"es una buena práctica incluir ``docstrings`` en el código que escribes, así "
+"que acostúmbrate a hacerlo."
 
 #: ../Doc/tutorial/controlflow.rst:454
 msgid ""
@@ -558,12 +558,12 @@ msgid ""
 "another function, or calls itself recursively, a new local symbol table is "
 "created for that call."
 msgstr ""
-"Los parámetros (argumentos) reales para una llamada de función se introducen "
-"en la tabla de símbolos local de la función llamada cuando se llama; por lo "
-"tanto, los argumentos se pasan usando *llamada por valor* (donde el *valor* "
-"es siempre un objeto *referencia*, no el valor del objeto). [#]_ Cuando una "
-"función llama a otra función, o se llama a sí misma de forma recursiva, se "
-"crea una nueva tabla de símbolos locales para esa llamada."
+"Los parámetros reales (argumentos) para una llamada de función se introducen "
+"en la tabla de símbolos local de la función llamada cuando ésta se llama; "
+"por lo tanto, los argumentos se pasan usando *llamada por valor* (donde el "
+"*valor* es siempre una *referencia* al objeto, no el valor del objeto). [#]_ "
+"Cuando una función llama a otra función, o se llama a sí misma de forma "
+"recursiva, se crea una nueva tabla de símbolos locales para esa llamada."
 
 #: ../Doc/tutorial/controlflow.rst:472
 msgid ""
@@ -591,10 +591,10 @@ msgstr ""
 "Viniendo de otros lenguajes, puedes objetar que ``fib`` no es una función, "
 "sino un procedimiento, porque no retorna un valor. De hecho, técnicamente "
 "hablando, los procedimientos sin :keyword:`return` sí retornan un valor, "
-"aunque uno aburrido. Este valor se llama ``None`` (es un nombre "
+"aunque uno bastante aburrido. Este valor se llama ``None`` (es un nombre "
 "predefinido). El intérprete por lo general no escribe el valor ``None`` si "
-"va a ser el único valor escrito. Si realmente se quiere, se puede verlo "
-"usando la función :func:`print` ::"
+"va a ser el único valor escrito. Puede verlo si realmente lo desea "
+"utilizando :func:`print`::"
 
 #: ../Doc/tutorial/controlflow.rst:494
 msgid ""
@@ -639,7 +639,7 @@ msgstr ""
 "y ``methodname`` es el nombre del método que está definido por el tipo del "
 "objeto. Distintos tipos definen distintos métodos. Métodos de diferentes "
 "tipos pueden tener el mismo nombre sin causar ambigüedad. (Es posible "
-"definir tipos de objetos propios, y métodos, usando clases, mira :ref:`tut-"
+"definir tus propios tipos de objetos y métodos, usando clases, ver :ref:`tut-"
 "classes`). El método :meth:`append` mostrado en el ejemplo está definido "
 "para objetos lista; añade un nuevo elemento al final de la lista. En este "
 "ejemplo es equivalente a ``result = result + [a]``, pero más eficiente."
@@ -711,7 +711,7 @@ msgid ""
 "*defining* scope, so that ::"
 msgstr ""
 "Los valores por omisión son evaluados en el momento de la definición de la "
-"función, en el ámbito de la definición, entonces::"
+"función en el ámbito de la definición, entonces::"
 
 #: ../Doc/tutorial/controlflow.rst:581
 msgid "will print ``5``."
@@ -799,13 +799,13 @@ msgid ""
 "positional arguments beyond the formal parameter list.  (``*name`` must "
 "occur before ``**name``.) For example, if we define a function like this::"
 msgstr ""
-"Cuando un parámetro formal de la forma ``**name`` está presente al final, "
+"Cuando un parámetro formal de la forma ``**nombre`` está presente al final, "
 "recibe un diccionario (ver :ref:`typesmapping`) conteniendo todos los "
 "argumentos nombrados excepto aquellos correspondientes a un parámetro "
 "formal. Esto puede ser combinado con un parámetro formal de la forma "
-"``*name`` (descrito en la siguiente sección) que recibe una :ref:`tuple <tut-"
-"tuples>` conteniendo los argumentos posicionales además de la lista de "
-"parámetros formales. (``*name`` debe ocurrir antes de ``**name``). Por "
+"``*nombre`` (descrito en la siguiente sección) que recibe una :ref:`tupla "
+"<tut-tuples>` conteniendo los argumentos posicionales además de la lista de "
+"parámetros formales. (``*nombre`` debe ocurrir antes de ``**nombre``). Por "
 "ejemplo, si definimos una función así::"
 
 #: ../Doc/tutorial/controlflow.rst:677
@@ -856,10 +856,10 @@ msgid ""
 "referred to as named parameters."
 msgstr ""
 "donde ``/`` y ``*`` son posicionales. Si se utilizan, esos símbolos indican "
-"el tipo de parámetro por como los argumentos deben enviarse a la función: "
-"solo por posición (*positional-only*), por posición o clave (*positional-or-"
-"keyword*) y solo por clave (*keyword-only*). Parámetros por clave pueden "
-"también denominarse parámetros por nombre o nombrados."
+"el tipo de parámetro según la forma en que los argumentos deben enviarse a "
+"la función: solo por posición (*positional-only*), por posición o clave "
+"(*positional-or-keyword*) y solo por clave (*keyword-only*). Parámetros por "
+"clave pueden también denominarse parámetros por nombre o nombrados."
 
 #: ../Doc/tutorial/controlflow.rst:728
 msgid "Positional-or-Keyword Arguments"
@@ -888,13 +888,13 @@ msgid ""
 "parameters. If there is no ``/`` in the function definition, there are no "
 "positional-only parameters."
 msgstr ""
-"En detalle, es posible señalar algunos parámetros como *únicamente "
-"posicionales*. En ese caso el orden de los parámetros es importante, y los "
-"parámetros no pueden ser indicados utilizando palabras claves. Parámetros "
-"únicamente posicionales son ubicados antes de una ``/`` (barra). La ``/`` es "
-"utilizada para separar lógicamente parámetros únicamente posicionales del "
-"resto. Si no existe una ``/`` en la definición de la función, no existen "
-"parámetros únicamente posicionales."
+"Mirando esto con un poco más de detalle, es posible señalar algunos "
+"parámetros como *únicamente posicionales*. En ese caso el orden de los "
+"parámetros es importante, y los parámetros no pueden ser indicados "
+"utilizando palabras claves. Parámetros únicamente posicionales son ubicados "
+"antes de una ``/`` (barra). La ``/`` es utilizada para separar lógicamente "
+"parámetros únicamente posicionales del resto. Si no existe una ``/`` en la "
+"definición de la función, no existen parámetros únicamente posicionales."
 
 #: ../Doc/tutorial/controlflow.rst:745
 msgid ""
@@ -1063,12 +1063,11 @@ msgid ""
 msgstr ""
 "Finalmente, la opción menos frecuentemente usada es especificar que una "
 "función puede ser llamada con un número arbitrario de argumentos. Estos "
-"argumentos serán organizados en una tupla (mira :ref:`tut-tuples`). Antes "
-"del número variable de argumentos, cero o más argumentos normales pueden "
-"estar presentes.::"
+"argumentos serán organizados en una tupla (ver :ref:`tut-tuples`). Antes del "
+"número variable de argumentos, cero o más argumentos normales pueden estar "
+"presentes.::"
 
 #: ../Doc/tutorial/controlflow.rst:889
-#, fuzzy
 msgid ""
 "Normally, these *variadic* arguments will be last in the list of formal "
 "parameters, because they scoop up all remaining input arguments that are "
@@ -1076,11 +1075,11 @@ msgid ""
 "``*args`` parameter are 'keyword-only' arguments, meaning that they can only "
 "be used as keywords rather than positional arguments. ::"
 msgstr ""
-"Normalmente estos argumentos de cantidad variables son los últimos en la "
-"lista de parámetros formales, porque toman todo el remanente de argumentos "
-"que se pasan a la función. Cualquier parámetro que suceda luego del "
-"``*args`` será 'sólo nombrado', o sea que sólo se pueden usar como "
-"argumentos nombrados y no como posicionales.::"
+"Normalmente estos argumentos *variádicos* serán los últimos en la lista de "
+"parámetros formales, porque toman todo el remanente de argumentos que se "
+"pasan a la función. Cualquier parámetro que suceda luego del ``*args`` será "
+"'sólo de palabra clave', o sea que sólo se pueden usar como argumentos "
+"nombrados y no como posicionales. ::"
 
 #: ../Doc/tutorial/controlflow.rst:906
 msgid "Unpacking Argument Lists"
@@ -1223,8 +1222,8 @@ msgid ""
 "and :pep:`484` for more information)."
 msgstr ""
 "Las :ref:`anotaciones de funciones <function>` son información completamente "
-"opcional sobre los tipos usadas en funciones definidas por el usuario (ver "
-"PEP 484 para más información)."
+"opcional sobre los tipos usadas en funciones definidas por el usuario (ver :"
+"pep:`3107` y :pep:`484` para más información)."
 
 #: ../Doc/tutorial/controlflow.rst:1034
 msgid ""
@@ -1249,7 +1248,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:1056
 msgid "Intermezzo: Coding Style"
-msgstr "Intermezzo: Estilo de codificación"
+msgstr "Intermezzo: Estilo de programación"
 
 #: ../Doc/tutorial/controlflow.rst:1061
 msgid ""
@@ -1260,11 +1259,11 @@ msgid ""
 "and adopting a nice coding style helps tremendously for that."
 msgstr ""
 "Ahora que estás a punto de escribir piezas de Python más largas y complejas, "
-"es un buen momento para hablar sobre *estilo de codificación*. La mayoría de "
+"es un buen momento para hablar sobre *estilo de programación*. La mayoría de "
 "los lenguajes pueden ser escritos (o mejor dicho, *formateados*) con "
 "diferentes estilos; algunos son mas fáciles de leer que otros. Hacer que tu "
 "código sea más fácil de leer por otros es siempre una buena idea, y adoptar "
-"un buen estilo de codificación ayuda tremendamente a lograrlo."
+"un buen estilo de programación ayuda tremendamente a lograrlo."
 
 #: ../Doc/tutorial/controlflow.rst:1067
 msgid ""
@@ -1273,8 +1272,8 @@ msgid ""
 "Python developer should read it at some point; here are the most important "
 "points extracted for you:"
 msgstr ""
-"Para Python, :pep:`8`  se erigió como la guía de estilo a la que más "
-"proyectos adhirieron; promueve un estilo de codificación fácil de leer y "
+"Para Python, :pep:`8` se erigió como la guía de estilo a la que más "
+"proyectos adhirieron; promueve un estilo de programación fácil de leer y "
 "visualmente agradable. Todos los desarrolladores Python deben leerlo en "
 "algún momento; aquí están extraídos los puntos más importantes::"
 
@@ -1338,7 +1337,7 @@ msgstr ""
 "Nombrar las clases y funciones consistentemente; la convención es usar "
 "``NotacionCamello`` para clases y ``minusculas_con_guiones_bajos`` para "
 "funciones y métodos. Siempre usa ``self`` como el nombre para el primer "
-"argumento en los métodos (mirar :ref:`tut-firstclasses` para más información "
+"argumento en los métodos (ver :ref:`tut-firstclasses` para más información "
 "sobre clases y métodos)."
 
 #: ../Doc/tutorial/controlflow.rst:1098
