Arregla traducción párrafo

--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-03 10:57-0300\n"
+"PO-Revision-Date: 2022-11-24 11:54+0100\n"
 "Last-Translator: Claudia Millan <clmilneb@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "Language: es\n"
@@ -20,6 +20,7 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/whatsnew/2.5.rst:3
 msgid "What's New in Python 2.5"
@@ -2999,12 +3000,13 @@ msgid ""
 msgstr ""
 "Se proporcionan constructores de tipo para los distintos tipos de C: :func:"
 "`c_int`, :func:`c_float`, :func:`c_double`, :func:`c_char_p` (equivalente a :"
-"c:expr:`char \\*`), and so forth.  Unlike Python's types, the C versions are "
-"all mutable; you can assign to their :attr:`value` attribute to change the "
-"wrapped value.  Python integers and strings will be automatically converted "
-"to the corresponding C types, but for other types you  must call the correct "
-"type constructor.  (And I mean *must*; si se equivoca, a menudo el "
-"intérprete fallará con un error de segmentación)."
+"c:expr:`char \\*` ), etcétera. A diferencia de los tipos de Python, las "
+"versiones C son todas mutables; puede asignar a su atributo :attr:`value` "
+"para cambiar el valor envuelto. Los enteros y las cadenas de Python se "
+"convertirán automáticamente a los tipos C correspondientes, pero para otros "
+"tipos debe llamar al constructor de tipo correcto. (Y me refiero a *debe*; "
+"hacerlo mal a menudo resultará en que el intérprete falle con una falla de "
+"segmentación)."
 
 #: ../Doc/whatsnew/2.5.rst:1706
 msgid ""
