Arreglando entrada fuzzy en installing/index

--- a/installing/index.po
+++ b/installing/index.po
@@ -13,12 +13,12 @@ msgstr ""
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
 "PO-Revision-Date: 2021-12-09 10:09+0800\n"
 "Last-Translator: Rodrigo Tobar <rtobarc@gmail.com>\n"
-"Language: es_ES\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es_ES\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
 
 #: ../Doc/installing/index.rst:7
@@ -406,14 +406,14 @@ msgstr ""
 "Es posible que ``pip`` no se instale por defecto. Una posible solución es::"
 
 #: ../Doc/installing/index.rst:216
-#, fuzzy
 msgid ""
 "There are also additional resources for `installing pip. <https://packaging."
 "python.org/en/latest/tutorials/installing-packages/#ensure-pip-setuptools-"
 "and-wheel-are-up-to-date>`__"
 msgstr ""
-"Hay recursos adicionales para `instalar pip. <https://packaging.python.org/"
-"tutorials/installing-packages/#install-pip-setuptools-and-wheel>`__"
+"También hay recursos adicionales para `installing pip. <https://packaging."
+"python.org/en/latest/tutorials/installing-packages/#ensure-pip-setuptools-"
+"and-wheel-are-up-to-date>`__"
 
 #: ../Doc/installing/index.rst:221
 msgid "Installing binary extensions"
