--- a/c-api/unicode.po
+++ b/c-api/unicode.po
@@ -11,16 +11,17 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-10-25 19:47+0200\n"
-"PO-Revision-Date: 2021-10-30 20:53-0300\n"
+"PO-Revision-Date: 2022-11-03 03:56-0400\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
-"Language: es\n"
 "Language-Team: python-doc-es (https://mail.python.org/mailman3/lists/docs-es."
 "python.org)\n"
-"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Generated-By: Babel 2.10.3\n"
+"X-Generator: Poedit 3.2.1\n"
 
 #: ../Doc/c-api/unicode.rst:6
 msgid "Unicode Objects and Codecs"
@@ -250,7 +251,7 @@ msgstr ""
 "Retorna una de las constantes de tipo ``PyUnicode`` (ver arriba) que indican "
 "cuántos bytes por carácter utiliza este objeto Unicode para almacenar sus "
 "datos. *o* tiene que ser un objeto Unicode en la representación "
-"\"canónica\" (no marcada)."
+"\"canónica\" (no verificada)."
 
 #: ../Doc/c-api/unicode.rst:165
 msgid ""
@@ -605,6 +606,11 @@ msgid ""
 "macro:`PyUnicode_4BYTE_KIND`) and it consists only of codepoints in the UCS1 "
 "range, it will be transformed into UCS1 (:c:macro:`PyUnicode_1BYTE_KIND`)."
 msgstr ""
+"Si es necesario, la entrada *buffer* se copia y se transforma en la "
+"representación canónica. Por ejemplo, si el *buffer* es una cadena de "
+"caracteres UCS4 (:c:macro:`PyUnicode_4BYTE_KIND`) y consta solo de puntos de "
+"código en el rango UCS1, se transformará en UCS1 (:c:macro:"
+"`PyUnicode_1BYTE_KIND`)."
 
 #: ../Doc/c-api/unicode.rst:436
 msgid ""
@@ -792,7 +798,7 @@ msgstr ":attr:`%zd`"
 
 #: ../Doc/c-api/unicode.rst:500 ../Doc/c-api/unicode.rst:503
 msgid ":c:type:`\\ Py_ssize_t`"
-msgstr ""
+msgstr ":c:type:`\\ Py_ssize_t`"
 
 #: ../Doc/c-api/unicode.rst:500
 msgid "Equivalent to ``printf(\"%zd\")``. [1]_"
@@ -1523,6 +1529,16 @@ msgid ""
 "note that the :c:expr:`wchar_t*` string might contain null characters, which "
 "would cause the string to be truncated when used with most C functions."
 msgstr ""
+"Copie el contenido del objeto Unicode en el búfer :c:expr:`wchar_t` *w*. "
+"Como mucho, se copian los caracteres *size* :c:expr:`wchar_t` (excluyendo un "
+"posible carácter de terminación final null). Retorna el número de :c:expr:"
+"`wchar_t` caracteres copiados o ``-1`` en caso de un error. Tenga en cuenta "
+"que la cadena resultante :c:expr:`wchar_t*` puede o no terminar en null. Es "
+"responsabilidad de la persona que llama asegurarse de que la cadena :c:expr:"
+"`wchar_t*` tenga una terminación null en caso de que la aplicación lo "
+"requiera. Además, tenga en cuenta que la cadena :c:expr:`wchar_t*` podría "
+"contener caracteres null, lo que haría que la cadena se truncara cuando se "
+"usa con la mayoría de las funciones de C."
 
 #: ../Doc/c-api/unicode.rst:963
 #, fuzzy
