Apply suggestions from code review
Co-authored-by: Claudia Millán <claudia@scibite.com>

--- a/c-api/tuple.po
+++ b/c-api/tuple.po
@@ -140,7 +140,7 @@ msgid ""
 "`PyTuple_SetItem`, does *not* discard a reference to any item that is being "
 "replaced; any reference in the tuple at position *pos* will be leaked."
 msgstr ""
-"Este función \"roba\" una referencia a *o* y, a diferencia de :c:func:"
+"Esta función \"roba\" una referencia a *o* y, a diferencia de :c:func:"
 "`PyTuple_SetItem`, *no* descarta una referencia a ningún elemento que se "
 "está reemplazando; cualquier referencia en la tupla en la posición *pos* se "
 "filtrará."
@@ -285,7 +285,7 @@ msgid ""
 msgstr ""
 "Describe un campo de una secuencia de estructura. Como una secuencia de "
 "estructura se modela como una tupla, todos los campos se escriben como :c:"
-"type:`PyObject*`. El índice en el array :attr:`fields` de :c:type:"
+"type:`PyObject*`. El índice en el arreglo :attr:`fields` de :c:type:"
 "`PyStructSequence_Desc` determina qué campo de la secuencia de estructura se "
 "describe."
 
