--- a/install/index.po
+++ b/install/index.po
@@ -152,7 +152,7 @@ msgstr ""
 "rapidez si se empaquetó y distribuyó de la manera estándar, es decir, "
 "utilizando Distutils. En primer lugar, el nombre de la distribución y el "
 "número de versión aparecerán destacados en el nombre del archivo descargado, "
-"p. :file:`foo-1.0.tar.gz` o :file:`widget-0.9.7.zip`. A continuación, el "
+"p. ej. :file:`foo-1.0.tar.gz` o :file:`widget-0.9.7.zip`. A continuación, el "
 "archivo se desempaquetará en un directorio con un nombre similar: :file:"
 "`foo-1.0` o :file:`widget-0.9.7`. Además, la distribución contendrá un "
 "script de configuración :file:`setup.py` y un archivo llamado :file:`README."
