Apply suggestions from code review
Co-authored-by: Carlos A. Crespo <lvccrespo@gmail.com>

--- a/whatsnew/2.5.po
+++ b/whatsnew/2.5.po
@@ -1507,7 +1507,7 @@ msgstr ""
 "incompatibilidades en las máquinas de 64 bits, por lo que se consideró que "
 "valía la pena hacer la transición ahora, mientras que la cantidad de "
 "usuarios de 64 bits aún es relativamente pequeña. (En 5 o 10 años, es "
-"posible que *all* esté en máquinas de 64 bits y la transición sería más "
+"posible que *todo* esté en máquinas de 64 bits y la transición sería más "
 "dolorosa entonces)."
 
 #: ../Doc/whatsnew/2.5.rst:904
@@ -3393,7 +3393,7 @@ msgid ""
 "embedded database, has been added to the standard library under the package "
 "name :mod:`sqlite3`."
 msgstr ""
-"El módulo pysqlite (https://www.pysqlite.org), un contenedor para la base de "
+"El módulo pysqlite (https://www.pysqlite.org), un envoltorio para la base de "
 "datos incrustada de SQLite, se agregó a la biblioteca estándar con el nombre "
 "de paquete :mod:`sqlite3`."
 
