traduccion using/cmdline.po

--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -402,15 +402,18 @@ msgstr ""
 msgid ""
 "Print a short description of Python-specific environment variables and exit."
 msgstr ""
+"Imprima una breve descripción de las variables de entorno específicas de Phyton y salga."
 
 #: ../Doc/using/cmdline.rst:207
 msgid ""
 "Print a description of implementation-specific :option:`-X` options and exit."
 msgstr ""
+"Imprima una descripción de las opciones :option:`-X` específicas de la implementación y salga."
 
 #: ../Doc/using/cmdline.rst:214
 msgid "Print complete usage information and exit."
 msgstr ""
+"Imprima información completa de uso y salga."
 
 #: ../Doc/using/cmdline.rst:221
 msgid "Print the Python version number and exit.  Example output could be:"
@@ -501,6 +504,7 @@ msgstr ""
 #: ../Doc/using/cmdline.rst:283
 msgid "See also the :option:`-P` and :option:`-I` (isolated) options."
 msgstr ""
+"Véase también las opciones :option:`-P` e :option:`-I` (aisladas)."
 
 #: ../Doc/using/cmdline.rst:288
 msgid ""
@@ -528,6 +532,8 @@ msgid ""
 "Run Python in isolated mode. This also implies :option:`-E`, :option:`-P` "
 "and :option:`-s` options."
 msgstr ""
+"Ejecute Python en modo aislado. Esto también implica las opciones :option:`-E`, :option:`-P` "
+"y :option:`-s`."
 
 #: ../Doc/using/cmdline.rst:302
 msgid ""
@@ -536,6 +542,10 @@ msgid ""
 "variables are ignored, too. Further restrictions may be imposed to prevent "
 "the user from injecting malicious code."
 msgstr ""
+"En modo aislado :data:`sys.path` no contiene ni el directorio del script ni "
+"el directorio site-packages del usuario. Todas las :envvar: de entorno:`PYTHON*` "
+"variables de entorno también se ignoran. Se pueden imponer otras restricciones "
+"para evitar que el usuario inyecte código malicioso."
 
 #: ../Doc/using/cmdline.rst:312
 msgid ""
