--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -532,8 +532,8 @@ msgid ""
 "Run Python in isolated mode. This also implies :option:`-E`, :option:`-P` "
 "and :option:`-s` options."
 msgstr ""
-"Ejecute Python en modo aislado. Esto también implica las opciones :option:`-E`, :option:`-P` "
-"y :option:`-s`."
+"Ejecute Python en modo aislado. Esto también implica las opciones :option:`-E`, "
+":option:`-P` y :option:`-s`."
 
 #: ../Doc/using/cmdline.rst:302
 msgid ""
