--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -402,7 +402,8 @@ msgstr ""
 msgid ""
 "Print a short description of Python-specific environment variables and exit."
 msgstr ""
-"Imprima una breve descripción de las variables de entorno específicas de Phyton y salga."
+"Imprima una breve descripción de las variables de entorno específicas de Phyton y" 
+"salga."
 
 #: ../Doc/using/cmdline.rst:207
 msgid ""
@@ -418,7 +419,7 @@ msgstr ""
 #: ../Doc/using/cmdline.rst:221
 msgid "Print the Python version number and exit.  Example output could be:"
 msgstr ""
-"Imprima el número de versión de Python y salga.  Ejemplo de salida podría "
+"Imprima el número de versión de Python y salga.  Ejemplo de salida podría"
 "ser:"
 
 #: ../Doc/using/cmdline.rst:227
