--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -145,13 +145,13 @@ msgstr ""
 
 #: ../Doc/using/cmdline.rst:68
 msgid ""
-"If this option is given, the first element of :data:`sys.argv` will be ``\"-"
-"c\"`` and the current directory will be added to the start of :data:`sys."
+"If this option is given, the first element of :data:`sys.argv` will be ``\"-c"
+"\"`` and the current directory will be added to the start of :data:`sys."
 "path` (allowing modules in that directory to be imported as top level "
 "modules)."
 msgstr ""
-"Si se proporciona esta opción, el primer elemento de :data:`sys.argv` será "
-"``\"-c\"`` y el directorio actual se agregará al inicio de :data:`sys.path` "
+"Si se proporciona esta opción, el primer elemento de :data:`sys.argv` será ``"
+"\"-c\"`` y el directorio actual se agregará al inicio de :data:`sys.path` "
 "(permitiendo que los módulos de ese directorio se importen como módulos de "
 "nivel superior)."
 
@@ -402,25 +402,24 @@ msgstr ""
 msgid ""
 "Print a short description of Python-specific environment variables and exit."
 msgstr ""
-"Imprima una breve descripción de las variables de entorno específicas de Phyton y" 
-"salga."
+"Imprima una breve descripción de las variables de entorno específicas de "
+"Phyton ysalga."
 
 #: ../Doc/using/cmdline.rst:207
 msgid ""
 "Print a description of implementation-specific :option:`-X` options and exit."
 msgstr ""
-"Imprima una descripción de las opciones :option:`-X` específicas de la implementación y salga."
+"Imprima una descripción de las opciones :option:`-X` específicas de la "
+"implementación y salga."
 
 #: ../Doc/using/cmdline.rst:214
 msgid "Print complete usage information and exit."
-msgstr ""
-"Imprima información completa de uso y salga."
+msgstr "Imprima información completa de uso y salga."
 
 #: ../Doc/using/cmdline.rst:221
 msgid "Print the Python version number and exit.  Example output could be:"
 msgstr ""
-"Imprima el número de versión de Python y salga.  Ejemplo de salida podría"
-"ser:"
+"Imprima el número de versión de Python y salga.  Ejemplo de salida podríaser:"
 
 #: ../Doc/using/cmdline.rst:227
 msgid "When given twice, print more information about the build, like:"
@@ -504,8 +503,7 @@ msgstr ""
 
 #: ../Doc/using/cmdline.rst:283
 msgid "See also the :option:`-P` and :option:`-I` (isolated) options."
-msgstr ""
-"Véase también las opciones :option:`-P` e :option:`-I` (aisladas)."
+msgstr "Véase también las opciones :option:`-P` e :option:`-I` (aisladas)."
 
 #: ../Doc/using/cmdline.rst:288
 msgid ""
@@ -533,8 +531,8 @@ msgid ""
 "Run Python in isolated mode. This also implies :option:`-E`, :option:`-P` "
 "and :option:`-s` options."
 msgstr ""
-"Ejecute Python en modo aislado. Esto también implica las opciones :option:`-E`, "
-":option:`-P` y :option:`-s`."
+"Ejecute Python en modo aislado. Esto también implica las opciones :option:`-"
+"E`, :option:`-P` y :option:`-s`."
 
 #: ../Doc/using/cmdline.rst:302
 msgid ""
@@ -544,9 +542,9 @@ msgid ""
 "the user from injecting malicious code."
 msgstr ""
 "En modo aislado :data:`sys.path` no contiene ni el directorio del script ni "
-"el directorio site-packages del usuario. Todas las :envvar: de entorno:`PYTHON*` "
-"variables de entorno también se ignoran. Se pueden imponer otras restricciones "
-"para evitar que el usuario inyecte código malicioso."
+"el directorio site-packages del usuario. Todas las :envvar: de entorno:"
+"`PYTHON*` variables de entorno también se ignoran. Se pueden imponer otras "
+"restricciones para evitar que el usuario inyecte código malicioso."
 
 #: ../Doc/using/cmdline.rst:312
 msgid ""
@@ -969,12 +967,12 @@ msgstr ""
 #: ../Doc/using/cmdline.rst:531
 msgid ""
 "``-X frozen_modules`` determines whether or not frozen modules are ignored "
-"by the import machinery.  A value of \"on\" means they get imported and "
-"\"off\" means they are ignored.  The default is \"on\" if this is an "
-"installed Python (the normal case).  If it's under development (running from "
-"the source tree) then the default is \"off\". Note that the "
-"\"importlib_bootstrap\" and \"importlib_bootstrap_external\" frozen modules "
-"are always used, even if this flag is set to \"off\"."
+"by the import machinery.  A value of \"on\" means they get imported and \"off"
+"\" means they are ignored.  The default is \"on\" if this is an installed "
+"Python (the normal case).  If it's under development (running from the "
+"source tree) then the default is \"off\". Note that the \"importlib_bootstrap"
+"\" and \"importlib_bootstrap_external\" frozen modules are always used, even "
+"if this flag is set to \"off\"."
 msgstr ""
 
 #: ../Doc/using/cmdline.rst:539
